src/css/style-dark.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
body{
    margin: 0;
    padding: 0;
    height: 100%;
    font-family: "Poppins", sans-serif !important;
    font-style: normal;
    font-size: 1rem;
    font-weight: 400;
    background-color: black;
    /* overflow: hidden; */
    color: rgba(255, 255, 255, 1) !important;
}
@media screen and (max-width: 992px) {
  body{
    overflow: scroll;
  }
}
.bg-color{
  background-color: rgba(20, 20, 20, 1);
}

.bg-color-header{
  background-color: rgba(35, 105, 147, 0.05);
}
.img-login-container {
  position: relative;
  overflow: hidden;
  background-image: url(../icons/bg-frame.png);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}
.img-container {
  position: relative;
  overflow: hidden;
  background-image: url(../icons/bg-frame.png);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}
.img-container::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient(270deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1));
  animation: gradientAnimation 10s ease-in-out infinite;
  z-index: 1;
}
@keyframes gradientAnimation {
0% {
background: linear-gradient(270deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1));
}
20% {
background: linear-gradient(180deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2));
}
40% {
background: linear-gradient(90deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3));
}
60% {
background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2));
}
80% {
background: linear-gradient(360deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1));
}
100% {
background: linear-gradient(270deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1));
}
}
.z-2 {
  z-index: 2;
}
.table-card{
  border-radius: 30px;
  background-color: rgba(20, 20, 20, 1);
}
.profile-icon{
  width: 60px;
  height: 60px;
}
.activity-icon{
  width: 30px;
  height: 30px;
}
.approve-icon{
  height: 40px;
}
.font-regular{
  font-weight: 500 !important;
}
.fw-400{
  font-weight: 400 !important;
}
.fw-600{
  font-weight: 600 !important;
}
.font-bold{
  font-weight: 700 !important;
}
.pt-100{
  padding-top: 100px;
}
.light-black{
  color: rgba(255, 255, 255, 0.5) !important;
}

#lock-wallet-btn:hover, 
#expand-btn:hover {
  box-shadow: 0px 4px 10px rgba(17, 52, 73, 0.3);
  background-color: black;
  color: white !important;
}

.dark-black{
  color: rgba(255, 255, 255, 0.7) !important;
}
.blue-gradient{
  background: linear-gradient(90deg, rgba(67, 106, 173, 1) 35%, rgba(67, 145, 178, 1) 100%);
   -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.dark-blue-gradient{
  background: linear-gradient(90deg, rgba(65, 89, 185, 1) 20%, rgba(29, 40, 83, 1) 100%);
}
.header{
  height: 80px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #181b1c !important;
  border-bottom: 1px solid #4B4B4B;
}
#middle-div {
  display: flex;
  align-items: center;
}
.navbar-nav {
  margin: 0;
}
.wallet-address {
  text-shadow: none !important;
  width: 30%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  position: relative;
  display: inline-block;
}
.circular-img {
  height: 30px;
  width: 30px;
}
.activity-card{
  background-color: rgba(20, 20, 20, 1);
  color: white;
}
.activity-card-body{
  padding-left: 0;
  display: flex;
}
.padding-right{
  padding-right: 20px;
}
.font-12{
  font-size: 12px;
  font-weight: 400;
  line-height: 14.4px;
}
.font-18 {
  font-size: 18px;
  font-weight: 400;
  line-height: 21.9px;
  color: rgba(25, 30, 59, 0.9);
}
.font-15 {
   font-size: 15px;
   line-height: 21.9px;
}
.f-15 {
  font-size: 15px;
}
.font-14 {
  font-size: 14px;
  line-height: 26px;
}
.f-14 {
  font-size: 14px;
}
.f-10 {
  font-size: 10px;
}
.f-20 {
  font-size: 20px;
}
.f-16{
  font-size: 16.95px;
}

.font-16 {
  font-size: 16.95px;
  line-height: 26px;
}
.font-20 {
  font-size: 20px;
  line-height: 28.4px;
}
.f-24{
  font-size: 24px;
}
.font-24 {
  font-size: 24px;
  line-height: 39px;
}
.font-30 {
  font-size: 30px;
  line-height: 43.7px;
}
.font-28 {
  font-size: 28px;
  line-height: 43.7px;
}
.font-60 {
  font-size: 60px;
  line-height: 80px;
}
.font-80 {
  font-size: 80px;
}
.font-40 {
  font-size: 40px;
  line-height: 60px;
}
.nav-icon{
  height: 30px;
}
.dropdown-menu{
min-width: 7rem;
background-color: rgba(20, 20, 20, 1);
}
.dropdown-menu[data-bs-popper] {
  right: 0 !important;
  left: auto !important;
}
.dropdown-toggle .fa-chevron-down {
  color: white;
}
.icon-container {
  position: relative;
  display: inline-block;
}

.tooltip-text {
  visibility: hidden;
  width: 120px;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 5px;
  padding: 5px;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  left: 50%;
  transform: translateX(-50%);
  opacity: 0;
  transition: opacity 0.3s;
}

.icon-container:hover .tooltip-text {
  visibility: visible;
  opacity: 1;
}
.color{
  color: #040486;
}
.wallet-link{
  background: linear-gradient(108deg, #000046 -0.79%, #008bb2 100%);
  text-decoration: none;
  padding: 7px;
  border-radius: 20px;
}
.border-color{
  border-color: rgba(255, 255, 255, 0.1) !important;
  background-color: rgba(20, 20, 20, 1);
}
.reject-button{
  height: 45px;
  font-size: 18px;
  width: 100%;
  border-radius: 10px;
  font-size: 15px;
  font-weight: 500;
  cursor: pointer;
  transition: background-color 0.3s ease;
}
.login-button {
  height: 45px;
  font-size: 18px;
  width: 100%;
  background: linear-gradient(108deg, rgba(65, 89, 185, 1) 20%, rgba(29, 40, 83, 1) 100%);
  color: white;
  border: none;
  border-radius: 10px;
  font-size: 15px;
  font-weight: 500;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.login-button:hover {
  opacity: 0.5;
}
/* ... */

